--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -179,5 +179,14 @@ body.list main.main > .post-content::after {
   }
 }
 
+  body.list main.main {
+  max-width: 1120px !important;
+}
+
+body.list main.main > .post-content {
+  max-width: 980px !important;
+}
+
+
 
 }
